Se hicieron modificaciones

--- a/mi_app/templates/formulario.html
+++ b/mi_app/templates/formulario.html
@@ -43,6 +43,8 @@
             {% endfor %}
             <button type="submit" class="btn btn-primary w-100">Registrarse</button>
         </form>
+        <!-- Botón para ver la información registrada -->
+        <a href="{% url 'info' %}" class="btn btn-secondary w-100 mt-3">Ver Información Registrada</a>
     </div>
 </body>
 </html>
