--- a/mi_app/templates/registro_exitoso.html
+++ b/mi_app/templates/registro_exitoso.html
@@ -10,6 +10,7 @@
         <div class="alert alert-success">
             <h2>¡Registro exitoso!</h2>
             <p>Gracias por registrarte.</p>
+            <a href="{% url 'registro' %}" class="btn btn-secondary w-100 mt-3">Regresar</a>
         </div>
     </div>
 </body>
