--- a/mi_app/templates/formulario.html
+++ b/mi_app/templates/formulario.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         body {
-            background: url("{% static 'img/gif_bienvenida.gif' %}") no-repeat center center fixed;
+            background: url("{% if gif %}{{ gif.imagen.url }}{% else %}{% static 'gif_bienvenida.gif' %}{% endif %}") no-repeat center center fixed;
             background-size: cover;
             display: flex;
             justify-content: center;
